--- a/holbegram/android/app/build.gradle
+++ b/holbegram/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.holbegram"
+    namespace = "com.example.holbegram" // Your chosen namespace
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.holbegram"
+        applicationId = "com.example.holbegram" // Your chosen application ID
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
@@ -41,35 +41,42 @@ android {
 
 buildscript {
   repositories {
-    // Check that you have the following line (if not, add it):
+    // Ensure Google's Maven repository is included
     google()  // Google's Maven repository
   }
   dependencies {
-    ...
-    // Add this line
-    classpath 'com.google.gms:google-services:4.3.13'
+    // Add the classpath for Google services plugin
+    classpath 'com.google.gms:google-services:4.3.13' // Google Services Plugin
   }
 }
 
 allprojects {
-  ...
   repositories {
-    // Check that you have the following line (if not, add it):
+    // Ensure Google's Maven repository is included for Firebase dependencies
     google()  // Google's Maven repository
-    ...
   }
 }
 
+// Apply the Google Services plugin
 apply plugin: 'com.android.application'
-// Add this line
-apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services' // Ensure this is applied at the bottom
 
 dependencies {
-  // Import the Firebase BoM
- implementation platform('com.google.firebase:firebase-bom:30.2.0')
+  // Import the Firebase BoM (Bill of Materials)
+  implementation platform('com.google.firebase:firebase-bom:30.2.0')
 
-  // Add the dependencies for any other desired Firebase products
-  // https://firebase.google.com/docs/android/setup#available-libraries
+  // Add any Firebase dependencies that you need for your app
+  // Example: Firebase Authentication
+  implementation 'com.google.firebase:firebase-auth'
+
+  // Add Firebase Cloud Firestore
+  implementation 'com.google.firebase:firebase-firestore'
+
+  // Add Firebase Storage
+  implementation 'com.google.firebase:firebase-storage'
+
+  // Add Firebase Realtime Database
+  implementation 'com.google.firebase:firebase-database'
 }
 
 flutter {
