--- a/holbegram/android/app/build.gradle
+++ b/holbegram/android/app/build.gradle
@@ -3,10 +3,11 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"  // Only this line is necessary
 }
 
 android {
-    namespace = "com.example.holbegram" // Your chosen namespace
+    namespace = "com.example.holbegram"  // Replace with your package name
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -20,65 +21,32 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.holbegram" // Your chosen application ID
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        applicationId = "com.example.holbegram"  // Your package name
+        minSdk = 23  // Directly set the minSdk version to 23
+        targetSdk = flutter.targetSdkVersion  // Match Flutter's target SDK version
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig = signingConfigs.debug  // Adjust signing config if needed
         }
     }
 }
 
-buildscript {
-  repositories {
-    // Ensure Google's Maven repository is included
-    google()  // Google's Maven repository
-  }
-  dependencies {
-    // Add the classpath for Google services plugin
-    classpath 'com.google.gms:google-services:4.3.13' // Google Services Plugin
-  }
+flutter {
+    source = "../.."  // Path to the Flutter source directory
 }
-
-allprojects {
-  repositories {
-    // Ensure Google's Maven repository is included for Firebase dependencies
-    google()  // Google's Maven repository
-  }
-}
-
-// Apply the Google Services plugin
-apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services' // Ensure this is applied at the bottom
 
 dependencies {
-  // Import the Firebase BoM (Bill of Materials)
-  implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    // Firebase BoM to manage versioning of Firebase dependencies
+    implementation(platform("com.google.firebase:firebase-bom:33.5.0"))
 
-  // Add any Firebase dependencies that you need for your app
-  // Example: Firebase Authentication
-  implementation 'com.google.firebase:firebase-auth'
-
-  // Add Firebase Cloud Firestore
-  implementation 'com.google.firebase:firebase-firestore'
-
-  // Add Firebase Storage
-  implementation 'com.google.firebase:firebase-storage'
-
-  // Add Firebase Realtime Database
-  implementation 'com.google.firebase:firebase-database'
-}
-
-flutter {
-    source = "../.."
+    // Add specific Firebase SDKs for the services you want to use
+    implementation("com.google.firebase:firebase-analytics")  // For Firebase Analytics
+    implementation("com.google.firebase:firebase-auth")  // For Firebase Authentication
+    implementation("com.google.firebase:firebase-firestore")  // For Firestore
+    implementation("com.google.firebase:firebase-storage")  // For Firebase Storage
+    implementation("com.google.firebase:firebase-database")  // For Realtime Database
 }
